platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_69.platter
start() { piece of exprInit = 1 2; }